force-app/main/default/objects/OpcionesPbiTramosC__c/OpcionesPbiTramosC__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>OpcionesPbiTramosC</label>
</CustomObject>