force-app/main/default/objects/OpcionesPbiTramosC__c/fields/C__c.field-meta.xml
<CustomField>
    <fullName>C__c</fullName>
    <label>C</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>