force-app/main/default/objects/OpcionesPbiTramosC__c/fields/DuracionContrato__c.field-meta.xml
<CustomField>
    <fullName>DuracionContrato__c</fullName>
    <label>DuracionContrato</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>