force-app/main/default/objects/OpcionesPbiTramosC__c/fields/PBI__c.field-meta.xml
<CustomField>
    <fullName>PBI__c</fullName>
    <label>PBI</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>