force-app/main/default/objects/OpcionesPbiTramosC__c/fields/T1__c.field-meta.xml
<CustomField>
    <fullName>T1__c</fullName>
    <label>T1</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>