force-app/main/default/objects/OpcionesPbiTramosC__c/fields/T2__c.field-meta.xml
<CustomField>
    <fullName>T2__c</fullName>
    <label>T2</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>