force-app/main/default/objects/OpcionesPbiTramosC__c/fields/T3__c.field-meta.xml
<CustomField>
    <fullName>T3__c</fullName>
    <label>T3</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>