force-app/main/default/objects/OpcionesPbiTramosC__c/fields/Usuarios__c.field-meta.xml
<CustomField>
    <fullName>Usuarios__c</fullName>
    <label>Usuarios</label>
    <length>50</length>
    <type>Text</type>
</CustomField>