force-app/main/default/objects/OpcionesPbiTramosC__c/listViews/MAC.listView-meta.xml
<ListView>
    <fullName>MAC</fullName>
    <columns>NAME</columns>
    <columns>Actividad__c</columns>
    <columns>Activo__c</columns>
    <columns>C__c</columns>
    <columns>PBI__c</columns>
    <columns>Provincia__c</columns>
    <columns>DuracionContrato__c</columns>
    <columns>T1__c</columns>
    <columns>T2__c</columns>
    <columns>T3__c</columns>
    <columns>Usuarios__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Usuarios__c</field>
        <operation>contains</operation>
        <value>davinia</value>
    </filters>
    <label>MAC</label>
    <language>es</language>
</ListView>